Remove further Gui from Menu
Create method to set text.